--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 qtermwidget (0.6.0-1) unstable; urgency=medium
 
-  * Initial release (Closes: #675355) 
+  * Initial release (Closes: #675355).
 
- -- Alf Gaida <agaida@siduction.org>  Wed, 22 Oct 2014 23:23:30 +0200
+ -- ChangZhuo Chen (陳昌倬) <czchen@gmail.com>  Tue, 18 Aug 2015 23:16:34 +0800
