--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,25 @@
 qtermwidget (0.6.0-1) unstable; urgency=medium
 
+  [ Alf Gaida ]
+  * README added.
+  * new debian $foo.
   * Initial release (Closes: #675355).
 
- -- ChangZhuo Chen (陳昌倬) <czchen@gmail.com>  Tue, 18 Aug 2015 23:16:34 +0800
+  [ Andrew Lee (李健秋) ]
+  * Adding upstream version 0.6.0.
+
+  [ ChangZhuo Chen (陳昌倬) ]
+  * Update symbol control file.
+  * Add watch.
+  * Cleanup control.
+  * Update copyright.
+  * Cleanup rule.
+  * Update changelog.
+
+  [ Andrew Lee (李健秋) ]
+  * Drop build-deps on quilt in control.
+  * Refine package descriptions.
+  * Added myself in copyright file.
+  * Refine copyright file.
+
+ -- Andrew Lee (李健秋) <ajqlee@debian.org>  Wed, 19 Aug 2015 02:39:14 +0800
