--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtermwidget (0.6.0+20150709-1) unstable; urgency=medium
+
+  * Cherry-picking upstream version 0.6.0+20150709.
+  * Symbols fixed for amd64 and i386
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 06 Sep 2015 04:05:43 +0200
+
 qtermwidget (0.6.0-1) unstable; urgency=medium
 
   [ Alf Gaida ]
