--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 qtermwidget (0.6.0+20150709-1) unstable; urgency=medium
 
+  [ Alf Gaida ]
   * Cherry-picking upstream version 0.6.0+20150709.
   * Symbols fixed for amd64 and i386
 
- -- Alf Gaida <agaida@siduction.org>  Sun, 06 Sep 2015 04:05:43 +0200
+  [ ChangZhuo Chen (陳昌倬) ]
+  * Make all non QTermWidget symbols optional (Closes: #798050).
+
+ -- ChangZhuo Chen (陳昌倬) <czchen@debian.org>  Tue, 15 Sep 2015 20:34:04 +0800
 
 qtermwidget (0.6.0-1) unstable; urgency=medium
 
