--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+qtermwidget (0.7.1-3) unstable; urgency=medium
+
+  * Bumped Standards to 4.0.0 - no changes needed
+  * Added 5 optional symbols (Closes: #853632)
+  * Added build dependency lxqt-build-tools
+  * Added Recommends: qtermwidget-l10n, fonts-hack-ttf
+
+ -- Alf Gaida <agaida@siduction.org>  Mon, 03 Jul 2017 00:45:55 +0200
+
 qtermwidget (0.7.1-2) unstable; urgency=medium
 
   * Added build-dependency libutf8proc-dev as the missed part for
