--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+qtermwidget (0.7.1-5) unstable; urgency=medium
+
+  * fixed another round of symbols, work in progress
+    (currently fixed amd64 and i386) (Closes: #874187)
+    Thanks Adrian Bunk for spotting this.
+  * bumped Standards to 4.1.0 - no changes needed
+  * fix some colons and not needed versions in d/control 
+
+ -- Alf Gaida <agaida@siduction.org>  Tue, 05 Sep 2017 16:55:18 +0200
+
 qtermwidget (0.7.1-4) unstable; urgency=medium
 
   * fixed symbols for gcc 7.1.0 (Closes: #871122)
