--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+qtermwidget (0.9.0-1) unstable; urgency=medium
+
+  * Cherry-picking upstream release: 0.9.0.
+  * Moved debian/.gitignore to ./.gitignore
+  * Bumped build dependency lxqt-build-tools to >= 0.5.0~
+  * Removed cmake fix, applied upstream
+  * Added some options to rules
+  * Added some new symbols
+
+ -- Alf Gaida <agaida@siduction.org>  Thu, 24 May 2018 01:11:06 +0200
+
 qtermwidget (0.8.0-6) unstable; urgency=medium
 
   * Bumped compat to 11
