--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtermwidget (0.9.0-2) unstable; urgency=medium
+
+  * Recommend fonts-hack instead of fonts-hack-ttf (Closes: #907279)
+  * Bumped Standards to 4.2.1, no changes needed
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 16 Sep 2018 14:16:19 +0200
+
 qtermwidget (0.9.0-1) unstable; urgency=medium
 
   * Cherry-picking upstream release: 0.9.0.
