Cherry-picking upstream release: 0.14.0.
* Bumped Standards to 4.3.0, no changes needed
* Dropped d/compat, use debhelper-compat = 12, no changes needed
* Fixed years in d/copyright
* Bumped minimum version lxqt-build-tools (>= 0.6.0~)
* Removed obsolete PULL_TRANSLATIONS= OFF from dh_auto_configure
* Added Build-Depends-Package field to symbols
* Installed new translations in the data package.
* Added two new symbols
* Added d/upstream/metadata

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+qtermwidget (0.14.0-1) unstable; urgency=medium
+
+  * Cherry-picking upstream release: 0.14.0.
+  * Bumped Standards to 4.3.0, no changes needed
+  * Dropped d/compat, use debhelper-compat = 12, no changes needed
+  * Fixed years in d/copyright
+  * Bumped minimum version lxqt-build-tools (>= 0.6.0~)
+  * Removed obsolete PULL_TRANSLATIONS= OFF from dh_auto_configure
+  * Added Build-Depends-Package field to symbols
+  * Installed new translations in the data package.
+  * Added two new symbols
+  * Added d/upstream/metadata
+
+ -- Alf Gaida <agaida@siduction.org>  Sun, 27 Jan 2019 15:29:16 +0100
+
 qtermwidget (0.9.0-2) unstable; urgency=medium
 
   * Recommend fonts-hack instead of fonts-hack-ttf (Closes: #907279)
