--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtermwidget (0.14.1-1) unstable; urgency=medium
+
+  * Cherry-picking upstream release: 0.14.1.
+
+ -- Alf Gaida <agaida@siduction.org>  Tue, 26 Feb 2019 01:00:03 +0100
+
 qtermwidget (0.14.0-1) unstable; urgency=medium
 
   * Cherry-picking upstream release: 0.14.0.
