--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-qtermwidget (0.14.1-2) UNRELEASED; urgency=medium
+qtermwidget (0.14.1-2) unstable; urgency=medium
 
   * Switched to gbp
-  * Bumped Standards-Version to 4.4.0, no changes needed
+  * Bumped Standards-Version to 4.4.1, no changes needed
+  * Fixed one symbol for ia64
+  * Added Rules-Requires-Root: no to make lintian happy
 
- -- Alf Gaida <agaida@siduction.org>  Sun, 25 Aug 2019 15:14:49 +0200
+ -- Alf Gaida <agaida@siduction.org>  Sun, 27 Oct 2019 00:04:08 +0200
 
 qtermwidget (0.14.1-1) unstable; urgency=medium
 
