chore: 修改LX5000 changlog
修改LX5000 changlog

Log: 修改LX5000 changlog
Change-Id: I8a7e6a68faeba8a0b0b0e8c70c46531c3c30effe

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (5.3.0.14-2) UNRELEASED; urgency=medium
+
+  * 修改龙芯5000的版本  
+
+ -- Deepin Packages Builder <chz@chz-PC>  Sat, 08 May 2021 16:02:01 +0800
+
 deepin-terminal (5.2.0) unstable; urgency=medium
 
   * Initial Release.
