--- a/debian/deepin-terminal.1
+++ b/debian/deepin-terminal.1
@@ -1,5 +1,5 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.\" Copyright (C) 2019 ~ 2020 Uniontech Software Technology Co.,Ltd
+.\"  (C) Copyright 2019 ~ 2020 Uniontech Software Technology Co.,Ltd
 .\"
 .TH "deepin-terminal" "1" "2021-1-28" "Deepin"
 .\" Please adjust this date whenever revising the manpage.
