--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (5.9.40) unstable; urgency=medium
+
+  * New version 5.9.40
+
+ -- hemingyang <hemingyang@uniontech.com>  Mon, 03 Jan 2023 11:23:05 +0800
+
 deepin-terminal (5.2.0) unstable; urgency=medium
 
   * Initial Release.
