--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (6.0.2) unstable; urgency=medium
+
+  * update version
+
+ -- liuzheng <liuzheng@uniontech.com>  Mon, 16 Jan 2023 14:39:13 +0800
+
 deepin-terminal (6.0.1) unstable; urgency=medium
 
   * New version 6.0.1
