--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (5.9.43) unstable; urgency=medium
+
+  * New version 5.9.43.
+
+ -- muyuankai <muyuankai@uniontech.com>  Fri, 16 Jun 2023 15:48:31 +0800
+
 deepin-terminal (5.9.42) unstable; urgency=medium
 
   * New version 5.9.42
