Chore: Update changelog
Update changelog

Log: Update changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (5.9.50) unstable; urgency=medium
+
+  * New version 5.9.50.
+
+ -- xiepengfei <xiepengfei@uniontech.com>  Sat, 30 Nov 2024 13:13:27 +0800
+
 deepin-terminal (5.9.49) unstable; urgency=medium
 
   * New version 5.9.49.
