--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 deepin-terminal (6.0.16) unstable; urgency=medium
 
+  * fix: crash on treeland.
+
+ -- xiepengfei <xiepengfei@uniontech.com>  Sat, 14 Dec 2024 13:39:48 +0800
+
+deepin-terminal (6.0.16) unstable; urgency=medium
+
   * feat: Add debuginfod settings (#366)
 
  -- Yutao Meng <mengyutao@deepin.org>  Tue, 19 Nov 2024 10:05:41 +0800
