--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (6.0.17) unstable; urgency=medium
+
+  * fix: crash on treeland.
+
+ -- xiepengfei <xiepengfei@uniontech.com>  Sat, 14 Dec 2024 13:39:48 +0800
+
 deepin-terminal (6.0.16) unstable; urgency=medium
 
   * feat: Add debuginfod settings (#366)
