--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (5.9.51) unstable; urgency=medium
+
+  * New version 5.9.51.
+
+ -- xiepengfei <xiepengfei@uniontech.com>  Sat, 14 Dec 2024 14:23:55 +0800
+
 deepin-terminal (5.9.50) unstable; urgency=medium
 
   * New version 5.9.50.
