--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-terminal (6.5.4) unstable; urgency=medium
+
+  * New version 6.5.4.
+
+ -- Wang Yu <wangyu@uniontch.com>  Thu, 27 Mar 2025 13:58:35 +0800
+
 deepin-terminal (6.5.3) unstable; urgency=medium
 
   * refactor: upgrade Qt and DTK compatibility (#402)
